--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.0.4"
